# pokenet

./: .pre-commit-config.yaml  README.md  pyproject.toml
.data/: node_data.csv
.github/workflows/: test-pipeline.yml
pokenet/: __init__.py  core.py
test/: test_core.py
