[tool.poetry]
name = "pokenet"
version = "0.1.0"
description = ""
authors = ["Jakob <88966745+kometenmelodie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.15"
pyvis = "^0.3.2"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 90
target-version = "py311"

[tool.black]
line-length = 90
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
